--- a/somos.html
+++ b/somos.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Somos la opción</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, eius tenetur commodi exercitationem harum dolore magnam quod facilis dolores blanditiis omnis atque voluptas doloribus repudiandae vitae deserunt dicta, provident voluptate.</p>
 </body>
 </html>
