agregé un h2 a somos

--- a/somos.html
+++ b/somos.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Somos la opción</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, eius tenetur commodi exercitationem harum dolore magnam quod facilis dolores blanditiis omnis atque voluptas doloribus repudiandae vitae deserunt dicta, provident voluptate.</p>
+    <h2>Un título secundario</h2>
 </body>
 </html>
