--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento con GIT</title>
+    <title>Documento con GIThub pages</title>
 </head> 
 
 <header><h1>Encabezado</h1></header>
